# papercrop

./: CBZwriter.lua  CMakeLists.txt  DevelopersWiki.md  GlobalUI.cpp  GlobalUI.h  ImageSegmentation.cpp  Makefile  PDFWriter.cpp  PDFWriter.h  PDFwin.cpp  PDFwin.h  PaperCrop.cpp  PaperCrop.h  PaperCrop.sln  PaperCrop.vcproj  ProjectHome.md  RightPanel.cpp  SplashMod.h  User_wiki.md  build.bat  build.sh  clean_build.sh  clean_build2.sh  config.lua  install_dependencies_ubuntu.sh  luna_mainlib.lua  main.lua  mylib.lua  mylib_filesystem.lua  nmake.lua  popplerlib.vcproj  stdafx.cpp  stdafx.h  ubuntu_installer.sh
WrapperLua/: BaselibLUA.cpp  BaselibLUA.h  BaselibLUA2.cpp  BaselibLUA3.cpp  MainlibLUA.cpp
branches/Html/: CBZwriter.lua  CMakeLists.txt  PDFwin.cpp  PDFwin.h  PaperCrop.cpp  RightPanel.cpp  config.lua  filechooser.py  luna_mainlib.lua  main.lua  paperCrop.py  stdafx.cpp  stdafx.h  ubuntu_installer.sh
config_for_stareread_STK101/: config.lua  stkmaker.au3
image/: Image.cpp  Image.h  ImagePixel.cpp  ImagePixel.h  ImageProcessor.cpp  ImageProcessor.h
luabind-0.7/: test.vcproj
luabind-0.9/: CMakeLists.txt
math/: Operator.cpp  bitVectorN.h  interval.cpp  interval.h  math_macro.h  mathclass.h  matrix.cpp  matrix_n.cpp  operatorTemplate.hpp  quater.cpp  quater.h  template_math.h  template_matrix.h  vector.cpp  vector.h  vector_n.cpp
pdfCrop/: build_pdfCrop.sh
poppler/: CMakeLists.txt  autogen.sh  config.h  configure.ac  gtk-doc.make  poppler-qt4.pc.in  poppler-splash.pc.in  poppler.pc.in
poppler/glib/: poppler-enums.h  test-poppler-glib.c
poppler/glib/reference/: poppler-docs.sgml  poppler-sections.txt  poppler.types
poppler/glib/reference/tmpl/: poppler-action.sgml  poppler-page.sgml  poppler-unused.sgml  poppler.sgml  stamp-poppler-enums.sgml
poppler/goo/: .cvsignore  FastAlloc.h  FastFixedAllocator.cc  FastFixedAllocator.h
poppler/html/: HtmlLinks.h  HtmlOutputDev.cc  HtmlOutputDev.h
poppler/poppler/: .cvsignore  UGooString.cc  UGooString.h  poppler-config.h
poppler/qt/: poppler-document.cc  poppler-link-qt3.h  poppler-page-transition-private.h  poppler-page-transition.cc  poppler-page.cc  poppler-qt.h
poppler/qt4/: Makefile.am
poppler/qt4/src/: Makefile.am  poppler-annotation-helper.h  poppler-fontinfo.cc  poppler-link.cc  poppler-page.cc  poppler-private.h  poppler-qt4.h
poppler/qt4/tests/: check_attachments.cpp  check_pagemode.cpp  poppler-attachments.cpp  test-password-qt4.cpp
poppler/splash/: Splash.cc
poppler/test/: gtk-cairo-test.cc  gtk-splash-test.cc  pdf-inspector.glade  pdftest-result-parse.py
poppler/utils/: .cvsignore  HtmlFonts.cc  HtmlFonts.h  HtmlLinks.cc  HtmlOutputDev.cc
presets/: default preset.lua  one-column papers (reflow mode).lua  one-column papers.lua  slides.lua  two-column papers (portrait).lua  two-column papers 2 (portrait).lua
script/: (html) vertical scroll (outputs multiple html files).lua  (landscape) vertical reflow.lua  (landscape) vertical scroll (outputs a single image per page).lua  (landscape) vertical scroll (outputs multiple images).lua  (portrait) fit images to screen width.lua  (portrait) fit images to screen.lua  (portrait) vertical reflow.lua  (portrait) vertical scroll (OCR to html file).lua  (portrait) vertical scroll (outputs a single image per page).lua  (portrait) vertical scroll (outputs multiple html files).lua
trunk/: CBZwriter.lua  CMakeLists.txt  GlobalUI.cpp  ImageSegmentation.cpp  ImageSegmentation.h  Makefile  NullOutputDev.h  PDFWriter.cpp  PDFWriter.h  PDFwin.cpp  PDFwin.h  PaperCrop.cpp  PaperCrop.h  ReadMe.txt  RightPanel.cpp  RightPanel.h  clean_build.sh  clean_build2.sh  clean_build_fedora.sh  config.lua  filechooser.py  install_dependencies_ubuntu.sh  luna_mainlib.lua  main.lua  mylib.lua  mylib_debugger.lua  mylib_filesystem.lua  nmake.lua  paperCrop.py  stdafx.cpp  stdafx.h  ubuntu_installer.sh
trunk/WrapperLua/: BaselibLUA2.cpp  LUAwrapper.h  MainlibLUA.cpp
trunk/config_for_stareread_STK101/: config.lua  mylib.lua  readme.txt
trunk/fltk/: dnd.cxx
trunk/image/: Image.cpp  Image.h  ImagePixel.cpp  ImageProcessor.h
trunk/luabind-0.7/: luabind_lib.sln  luabind_lib.vcproj
trunk/luabind-0.9/: CMakeLists.txt
trunk/math/: Operator.h  bitVectorN.cpp  intervals.cpp  intervals.h  matrix.h  matrix_n.h  template_math.h  tvector.h  vector_n.cpp  vector_n.h
trunk/pdfCrop/: PdfCrop.java
trunk/poppler/: .cvsignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  README  TODO  poppler-cairo.pc.in  poppler-glib.pc.in  poppler-qt.pc.in
trunk/poppler/glib/: .cvsignore  poppler-enums.c
trunk/poppler/glib/reference/: .cvsignore  Makefile.am
trunk/poppler/glib/reference/tmpl/: poppler-document.sgml  poppler-enums.sgml  poppler-private.sgml
trunk/poppler/goo/: FixedPoint.cc
trunk/poppler/m4/: libjpeg.m4  qt.m4
trunk/poppler/poppler/: Makefile.in  OptionalContent.cc  SplashOutputDev.cc  config.h  poppler-config.h
trunk/poppler/qt/: .cvsignore  Makefile.am  poppler-fontinfo.cc  poppler-link.cc  poppler-page-transition.h  poppler-private.h  test-poppler-qt.cpp
trunk/poppler/qt4/src/: .cvsignore  Doxyfile  Mainpage.dox  poppler-annotation.cc  poppler-annotation.h  poppler-document.cc  poppler-embeddedfile.cc  poppler-link.h  poppler-textbox.cc
trunk/poppler/qt4/tests/: .cvsignore  Makefile.am  check_dateConversion.cpp  check_fonts.cpp  check_metadata.cpp  check_pagelayout.cpp  check_permissions.cpp  poppler-fonts.cpp  stress-poppler-qt4.cpp  test-poppler-qt4.cpp
trunk/poppler/splash/: Splash.cc
trunk/poppler/test/: .cvsignore  pdf-inspector.cc  pdf-operators.c
trunk/presets/: default preset.lua  one-column papers (reflow mode).lua  one-column papers.lua  two-column papers (landscape).lua
trunk/script/: (landscape) fit images to screen.lua  (portrait) vertical scroll (outputs a single image if not too big).lua  (portrait) vertical scroll (outputs a single image).lua  (portrait) vertical scroll (outputs multiple images).lua
utility/: FlLayout.cpp  FlLayout.h  FltkAddon.cpp  FltkAddon.h  TypeString.h
wiki/: DevelopersWiki.wiki  User_wiki.wiki
(+33 files in other folders)
