# -*- mode: cmake; -*-
project(PopplerLib)

# Make sure the compiler can find include files from our Hello library.
include_directories (
	${PopplerLib_SOURCE_DIR}
	${PopplerLib_SOURCE_DIR}/baseutils
	${PopplerLib_SOURCE_DIR}/src
	${PopplerLib_SOURCE_DIR}/goo
	${PopplerLib_SOURCE_DIR}/poppler
	${PopplerLib_SOURCE_DIR}/splash
	${PopplerLib_SOURCE_DIR}/../ext/jpeg
	${PopplerLib_SOURCE_DIR}/../ext/zlib
	${PopplerLib_SOURCE_DIR}/../ext/freetype231/include
	)

#-DLUABIND_NO_ERROR_CHECKING 
add_definitions(-DNO_GUI -DWIN32 -D_WINDOWS -DUSE_OWN_GET_AUTH_DATA -DPOPPLER_DATADIR= -DENABLE_ZLIB=1 -DENABLE_LIBJPEG=1)
set(src
	"goo/FastAlloc.cc"
	"goo/FastAlloc.h"
	"goo/FastFixedAllocator.cc"
	"goo/FastFixedAllocator.h"
	"goo/FixedPoint.cc"
	"goo/FixedPoint.h"
	"fofi/FoFiBase.cc"
	"fofi/FoFiBase.h"
	"fofi/FoFiEncodings.cc"
	"fofi/FoFiEncodings.h"
	"fofi/FoFiTrueType.cc"
	"fofi/FoFiTrueType.h"
	"fofi/FoFiType1.cc"
	"fofi/FoFiType1.h"
	"fofi/FoFiType1C.cc"
	"fofi/FoFiType1C.h"
	"goo/gfile.cc"
	"goo/gfile.h"
	"goo/gmem.c"
	"goo/gmem.cc"
	"goo/gmem.h"
	"goo/gmempp.cc"
	"goo/GooHash.cc"
	"goo/GooHash.h"
	"goo/GooList.cc"
	"goo/GooList.h"
	"goo/GooMutex.h"
	"goo/GooString.cc"
	"goo/GooString.h"
	"goo/GooTimer.cc"
	"goo/GooTimer.h"
	"goo/GooVector.h"
	"goo/gtypes.h"
	"poppler/Annot.cc"
	"poppler/Annot.h"
	"poppler/Array.cc"
	"poppler/Array.h"
	"poppler/BaseFile.h"
	"poppler/BuiltinFont.cc"
	"poppler/BuiltinFont.h"
	"poppler/BuiltinFontTables.cc"
	"poppler/BuiltinFontTables.h"
	"poppler/Catalog.cc"
	"poppler/Catalog.h"
	"poppler/CharCodeToUnicode.cc"
	"poppler/CharCodeToUnicode.h"
	"poppler/CharTypes.h"
	"poppler/CMap.cc"
	"poppler/CMap.h"
	"poppler/CompactFontTables.h"
	"poppler/config.h"
	"poppler/DCTStream.cc"
	"poppler/DCTStream.h"
	"poppler/Decrypt.cc"
	"poppler/Decrypt.h"
	"poppler/Dict.cc"
	"poppler/Dict.h"
	"poppler/Error.cc"
	"poppler/Error.h"
	"poppler/ErrorCodes.h"
	"poppler/FlateStream.cc"
	"poppler/FlateStream.h"
	"poppler/FontEncodingTables.cc"
	"poppler/FontEncodingTables.h"
	"poppler/FontInfo.cc"
	"poppler/FontInfo.h"
	"poppler/Form.cc"
	"poppler/Form.h"
	"poppler/Function.cc"
	"poppler/Function.h"
	"poppler/Gfx.cc"
	"poppler/Gfx.h"
	"poppler/GfxFont.cc"
	"poppler/GfxFont.h"
	"poppler/GfxState.cc"
	"poppler/GfxState.h"
	"poppler/GlobalParams.cc"
	"poppler/GlobalParams.h"
	"poppler/GlobalParamsWin.cc"
	"poppler/JArithmeticDecoder.cc"
	"poppler/JArithmeticDecoder.h"
	"poppler/JBIG2Stream.cc"
	"poppler/JBIG2Stream.h"
	"poppler/JPXStream.cc"
	"poppler/JPXStream.h"
	"poppler/Lexer.cc"
	"poppler/Lexer.h"
	"poppler/Link.cc"
	"poppler/Link.h"
	"poppler/Movie.cc"
	"poppler/Movie.h"
	"poppler/NameToCharCode.cc"
	"poppler/NameToCharCode.h"
	"poppler/NameToUnicodeTable.h"
	"poppler/Object.cc"
	"poppler/Object.h"
	"poppler/OptionalContent.cc"
	"poppler/OptionalContent.h"
	"poppler/Outline.cc"
	"poppler/Outline.h"
	"poppler/OutputDev.cc"
	"poppler/OutputDev.h"
	"poppler/Page.cc"
	"poppler/Page.h"
	"poppler/PageLabelInfo.cc"
	"poppler/PageLabelInfo.h"
	"poppler/PageTransition.cc"
	"poppler/PageTransition.h"
	"poppler/Parser.cc"
	"poppler/Parser.h"
	"poppler/PDFDoc.cc"
	"poppler/PDFDoc.h"
	"poppler/PDFDocEncoding.cc"
	"poppler/PDFDocEncoding.h"
	"poppler/poppler-config.h"
	"poppler/PreScanOutputDev.cc"
	"poppler/PreScanOutputDev.h"
	"poppler/ProfileData.cc"
	"poppler/ProfileData.h"
	"poppler/PSOutputDev.cc"
	"poppler/PSOutputDev.h"
	"poppler/PSTokenizer.cc"
	"poppler/PSTokenizer.h"
	"poppler/SecurityHandler.cc"
	"poppler/SecurityHandler.h"
	"poppler/Sound.cc"
	"poppler/Sound.h"
	"poppler/SplashOutputDev.cc"
	"poppler/SplashOutputDev.h"
	"poppler/Stream-CCITT.h"
	"poppler/Stream.cc"
	"poppler/Stream.h"
	"poppler/TextOutputDev.cc"
	"poppler/TextOutputDev.h"
	"poppler/UGooString.cc"
	"poppler/UGooString.h"
	"poppler/UnicodeCClassTables.h"
	"poppler/UnicodeCompTables.h"
	"poppler/UnicodeDecompTables.h"
	"poppler/UnicodeMap.cc"
	"poppler/UnicodeMap.h"
	"poppler/UnicodeMapTables.h"
	"poppler/UnicodeTypeTable.cc"
	"poppler/UnicodeTypeTable.h"
	"poppler/UTF8.h"
	"poppler/XpdfPluginAPI.cc"
	"poppler/XpdfPluginAPI.h"
	"poppler/XRef.cc"
	"poppler/XRef.h"
	"splash/Splash.cc"
	"splash/Splash.h"
	"splash/SplashBitmap.cc"
	"splash/SplashBitmap.h"
	"splash/SplashClip.cc"
	"splash/SplashClip.h"
	"splash/SplashErrorCodes.h"
	"splash/SplashFont.cc"
	"splash/SplashFont.h"
	"splash/SplashFontEngine.cc"
	"splash/SplashFontEngine.h"
	"splash/SplashFontFile.cc"
	"splash/SplashFontFile.h"
	"splash/SplashFontFileID.cc"
	"splash/SplashFontFileID.h"
	"splash/SplashFTFont.cc"
	"splash/SplashFTFont.h"
	"splash/SplashFTFontEngine.cc"
	"splash/SplashFTFontEngine.h"
	"splash/SplashFTFontFile.cc"
	"splash/SplashFTFontFile.h"
	"splash/SplashGlyphBitmap.h"
	"splash/SplashMath.h"
	"splash/SplashPath.cc"
	"splash/SplashPath.h"
	"splash/SplashPattern.cc"
	"splash/SplashPattern.h"
	"splash/SplashScreen.cc"
	"splash/SplashScreen.h"
	"splash/SplashState.cc"
	"splash/SplashState.h"
	"splash/SplashT1Font.cc"
	"splash/SplashT1Font.h"
	"splash/SplashT1FontEngine.cc"
	"splash/SplashT1FontEngine.h"
	"splash/SplashT1FontFile.cc"
	"splash/SplashT1FontFile.h"
	"splash/SplashTypes.h"
	"splash/SplashXPath.cc"
	"splash/SplashXPath.h"
	"splash/SplashXPathScanner.cc"
	"splash/SplashXPathScanner.h"
	)

add_library(PopplerLib
	${src}
	)

